# ug_locator

./: .dockerignore  .example.env  .gitignore  Dockerfile  Dockerfile.backend  Dockerfile.dev  Dockerfile.frontend  Dockerfile.prod  README.md  compose.yml  docker-compose.dev.yaml  docker-compose.dev.yml  docker-compose.prod.yaml  docker-compose.prod.yml  docker-compose.yaml  init-db.sh  manage.py  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  requirements.txt
.github/workflows/: django.yml
apps/frontend/: package.json
backend/: .gitignore  Dockerfile.dev  Dockerfile.prod  pyproject.toml  requirements.dev.txt  requirements.txt
backend/accounts/: admin.py  authentication.py  forms.py  models.py  serializers.py  urls.py  views.py
backend/accounts/migrations/: 0001_initial.py  0002_alter_customuser_options_alter_customuser_managers_and_more.py  0003_alter_customuser_name.py  0004_alter_customuser_name.py
backend/places/: models.py  serializers.py  urls.py  views.py
backend/places/migrations/: 0001_initial.py
backend/templates/accounts/: signup.html
backend/templates/common/: navbar.html
backend/templates/places/: _places_filter.html  place_list.html
backend/ug_locator/: settings.py  urls.py  views.py  wsgi.py
deployable/: asgi.py  urls.py  wsgi.py
frontend/: Dockerfile.dev  Dockerfile.prod  index.html  package-lock.json  package.json
frontend/src/: App.tsx
src/: manage.py  package-lock.json  package.json
src/accounts/: admin.py  models.py
src/deployable/: settings.py
src/places/: admin.py  urls.py  (+1 more)
(+52 files in other folders)
