[project]
name = "deployable"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "crispy-tailwind>=1.0.3",
    "django==5.2",
    "django-browser-reload==1.18.0",
    "django-compressor==4.5.1",
    "django-crispy-forms>=2.4",
    "gunicorn==23.0.0",
    "psycopg2>=2.9.10",
    "python-decouple==3.8",
]
